# CombinatorEvolve

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  PacletInfo.m  README.md  build.wls  install.wls  lint.sh  pack.wls  performanceTest.wls  test.wls
.circleci/: config.yml
CombinatorEvolve.xcodeproj/: project.pbxproj
CombinatorEvolve.xcodeproj/xcshareddata/xcbaselines/69D8669F2566CCD40042D7C3.xcbaseline/: DF6F62CD-6E8B-4D16-AA09-18381B70EA58.plist  Info.plist
CombinatorEvolve.xcodeproj/xcshareddata/xcschemes/: CombinatorEvolve.xcscheme
DevUtils/: BuildLibCombinatorEvolve.m  Console.m  FileTreeHashes.m  GitLink.m  PackCombinatorEvolve.m  Rasterization.m  init.m
Kernel/: CombinatorLeftmostOutermostLeafCounts.m  SKCombinatorLeftmostOutermostLeafCounts.m  buildData.m  init.m
Tests/: SKCombinatorLeftmostOutermostLeafCounts.wlt  Tests.mm
cmake/: CombinatorEvolveConfig.cmake.in
cmake/Dependencies/: FindGMP.cmake
libCombinatorEvolve/: CombinatorEvolve.cpp  CombinatorEvolve.hpp  CombinatorSystem.cpp  CombinatorSystem.hpp  Expression.hpp  IDTypes.hpp  Rule.cpp  Rule.hpp
scripts/: buildLibraryResources.sh  version.wl
